[gd_scene load_steps=2 format=3 uid="uid://dkt0o2rmnww0h"]

[ext_resource type="Script" path="res://Splash.gd" id="1_0gjtl"]

[node name="Splash" type="Node2D"]
script = ExtResource("1_0gjtl")

[node name="Level_1" type="Button" parent="."]
offset_left = 62.0
offset_top = 28.0
offset_right = 526.0
offset_bottom = 136.0
text = "Platforms"

[node name="Level_2" type="Button" parent="."]
offset_left = 64.0
offset_top = 196.0
offset_right = 531.0
offset_bottom = 309.0
text = "Falling Polygons"

[node name="Level_3" type="Button" parent="."]
offset_left = 69.0
offset_top = 376.0
offset_right = 540.0
offset_bottom = 490.0
text = "Lighting"

[node name="Level_4" type="Button" parent="."]
offset_left = 609.0
offset_top = 25.0
offset_right = 1073.0
offset_bottom = 133.0
text = "Space Shooter"

[connection signal="pressed" from="Level_1" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Level_2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level_4" to="." method="_on_level_4_pressed"]
